--- a/Common/notes.org
+++ b/Common/notes.org
@@ -91,10 +91,13 @@ Ps ∈ { sets of components compatible with ψ }
 
 DEF(Pᵢ)  = { db | ∃Ps={P₁ ... Pᵢ₋₁, Pᵢ₊₁ ... Pₙ}. ⋈(Ps ∪ {Pᵢ}) ⇓ db }
 DEF(Ps) = ⋂ { DEF(Pᵢ)  | Pᵢ ∈ Pₛ }
-DEF     = ⋃ { DEF(Ps) | ∃ Ps } = { db | ∃Ps. db ∈ DEF(Ps) }
+DEF     = ⋃ { DEF(Ps) | ∃ Ps } = { db | ∃Ps. db ∈ DEF(Ps) } = { db | ∃Ps. Ps ⇓ db }
+
 UNDEF(Pᵢ) = { ub(t₁,Pᵢ) | ∃ db(t) ∈ DEF(Pᵢ) /\ t=t₁at₂ /\ a∈Pᵢ }
 UNDEF(Ps) = ⋂ { UNDEF(Pᵢ) | Pᵢ∈Ps}
 UNDEF = ⋃ { UNDEF(Ps) | ∃Ps }
+
+π ⊆ DEF
 
 refDef(ub(t,Pᵢ)) = { db(t;t₂) | db(t;t₂) ∈ DEF }
 
@@ -192,7 +195,7 @@ something that is not expressable in the source, independently of what
 program you start with.
 
 Some simple implications:
-CCR + (V?)DEF => CCRD
+CCR + VDEF => CCRD
 *** Compiler Correctness with definability
 A possible way to limit the damage caused by undefined behaviors could be to say
 something more about the refinement. The idea is to constrain it to what is
@@ -211,6 +214,12 @@ program that produces them.
 
 Thm: CCRD => Preservation of satisfaction
 [CH: Don't really see this. What about the 2nd branch of the or above?]
+[MS: the idea is that the property should contain ub(prefix(db)) and
+definability makes sure that only defined continuations are allowed.
+But we should work the proof in more detail and try an example with
+the death input.]
+
+TODO try out example with death input
 
 * Robust Satisfaction and its preservation for linked programs
 First of all, we must introduce the notions of linking and separate compilation.
@@ -242,13 +251,10 @@ PRS (Preservation of Robust Satisfaction):
 
 Note that P and C are sets of components.
 
-An additional definition that we need is the one which allows us to deal with
-verified programs that can never exhibit undefined behaviors.
-[CH: This remark seems completely out of context. Need for what?]
-
 * Robust Compilation (OLD_RC_DC)
 
-RC: ∀c defined. c[P↓] ⇓ₜ db => ∃C. C[P] ⇓ₛ db \/ C[P] ⇓ₛ ub(pref(db),P)
+RC: ∀c defined. c[P↓] ⇓ᵢ b => ∃C. C[P] ⇓ₛ b \/ C[P] ⇓ₛ ub(pref(b),P)
+RC: ∀c. c[P↓] ⇓ₜ db => ∃C. C[P] ⇓ₛ db \/ C[P] ⇓ₛ ub(pref(db),P)
 
 ** why this definition
 Starting from CCR and CCRD we can obtain the equivalent for a
@@ -266,14 +272,15 @@ RCD: ∀c FD. c[P↓] ⇓ᵢ db => ∃C. C[P] ⇓ₛ db \/ (C[P] ⇓ₛ ub(pref(
 TODO should C be defined or fully defined?
 
 ** proof of RC for our instance from T to S
-∀c. c[P↓] ⇓ₜ db =>DEC
+∀c. c[P↓] ⇓ₜ db =>DEC  (no need for refinements)
 P↓ ⇓ₜ{C} db =>PCCR 
 P ⇓ₛ{C} b' /\ (b'=db \/ b'=ub(pref(db),P) =>DEF in both cases
 ∃C. C[P] ⇓ₛ b' /\ (b'=db \/ b'=ub(pref(db),P)
 
 ** proof of RC for our instance from I to S
-   it can be proved with the huge assumption that c is defined, this
-   however doesn't influence preservation of properties.
+   same as above but with DECR, it can be proved with the huge
+   assumption that c is defined, this however doesn't influence
+   preservation of properties.
 
    TODO: RC_IT + RC_SI => RC_ST
 
@@ -333,7 +340,8 @@ satisfied:
 - fix 2
 πₚ(b) = { b(t) | filter(t,P) ∈ Π}
 
-
+- fix 3
+  use an alternative notion of property π(b)
 TODO
 
 *** HR notes
@@ -404,6 +412,180 @@ Suppose ↓ is wrong, then either:
    ¬∃ prefix(db') = t
 
 (∀Pᵢ. ∃Csᵢ. ⋈(Csᵢ,Pᵢ) ⇓ₛ db 
+* removing ub from properties
+** changing satisfaction
+A property π is a set of defined behaviors, π ⊆ DEF, where DEF
+contains all the possible defined behaviors that a set of interfaces
+can produce.
+
+When a semantics produces an ub we need to expand it and check that
+all its possible continuations are in π.
+
+CCRD:
+   ∀ b. P↓ ⇓ᵢ b => P ⇓ₛ b
+                ∨ (P ⇓ₛ ub(prefix(b)) ∧ ∃ P'. P' ⇓ₛ b)
+
+Def: Whole program Satisfaction
+WP satisfies π iff
+∀t. WP ⇓ b =>
+  (b=db => db ∈ π) /\
+  (b=ub(t) => ∀t'. t'≥t /\ ∃WP'. WP' ⇓ db(t') => db(t') ∈ π)
+
+Def: Preservation of WS
+∀WP π. WP satisfies π => WP↓ satisfies π
+
+Th: CCRD <=> PWS
+Proof
+=>
+Assume
+  h1: WP↓ ⇓ᵢ b
+  h2: CCRD
+  h3: WP satisfies π
+To show 
+  WP↓ satisfies π
+
+  h1 =>CCRD
+  i) P ⇓ₛ b ∨
+    =>h3
+    ia) (b=db => db ∈ π) /\
+      by h1 WP↓ ⇓ᵢ db, to show db ∈ π, OK
+
+    ib) (b=ub(t) => ∀t'. t'≥t /\ ∃WP'. WP' ⇓ₛ db(t') => db(t') ∈ π)
+      by h1 WP↓ ⇓ᵢ ub(t), to show ∀t'. t'≥t /\ ∃wp'. wp' ⇓ᵢ db(t') => db(t') ∈ π)
+      Given t' t'≥t /\ ∃wp'. wp' ⇓ᵢ db(t'), to show db(t') ∈ π
+      by VDEF on wp' and db(t'), ∃ WP'. WP' ⇓ₛ db(t')
+      then db(t') ∈ π
+
+  ii) (P ⇓ₛ ub(prefix(b)) ∧ ∃ P'. P' ⇓ₛ b)
+
+
+Def: Robust Satisfaction 123
+P robustly satisfies π iff
+∀C t. C[P] ⇓ b =>
+  (b=db => db ∈ π) /\
+  (b=ub(t,P) => ∀t'. t'≥t /\ ∃WP. WP ⇓ db(t') => db(t') ∈ π)
+  (b=ub(t,C) => ∀t'. t'≥t /\ ∃C'. C'[P] ⇓ db(t') => db(t') ∈ π)
+
+Def: Robust Satisfaction 12
+∀C t. C[P] ⇓ b /\ b≠ub(t,C) =>
+  (b=db => db ∈ π) /\
+  (b=ub(t,P) => ∀t'. t'≥t /\ ∃WP. WP ⇓ db(t') => db(t') ∈ π)
+
+Th: RS12 <=> RS123
+TODO
+
+Def: Robust Compilation
+RC: ∀c t. c[P↓] ⇓ᵢ b(t) /\ b(t)≠ub(t,C) => ∃C. C[P] ⇓ₛ b(t) \/ C[P] ⇓ₛ ub(pref(t),P)
+
+Def: Preservation of Robust Satisfaction
+∀P π. P robustly satisfies π => P↓ robustly satisfies π
+
+Th: RC <=> PRS
+TODO
+
+** changing notion of robust satisfaction
+Proof and definition become more detailed, which means clearer but also harder to read.
+The π contains only DEF and it's much clearer.
+
+*** Robust Satisfaction:
+   P robustly satisfies π ⊆ DEF
+   ∀P t C. C[P]⇓b(t) =>
+   (b=db(t) => db(t) ∈ π) /\
+   (b=ub(t,Pᵢ) => ∀t'. t≤t' /\ ∃P'. C[P'] ⇓ db(t') /\ db(t') ∈ π
+   (b=ub(t,C) => ∀t'. t≤t' /\ ∃P'. C[P'] ⇓ db(t') /\ db(t') ∈ π
+
+   (b=ub(t,C) => ∃db. db(t) ∈ π) /\
+   (b=ub(t,C) => ∃db. db(t') ∈ π /\ t≤t') /\
+   (b=ub(t,C) => ∀db. db(t') ∈ π /\ t≤t') /\
+
+   Note that satisfaction for whole programs is an instance with an
+   empty C and the second match doesn't occur.
+
+*** Preservation of RS:
+    RS_L1(P) => RS_L2(P↓)
+*** RC+HR => PRS_SI
+
+Assume
+  HR: ∀C. C[P]⇓b(t) => ∃C' defined. C'[P]⇓b'(t) /\ b'≠ub(t,C')
+
+Assume h1 
+  ∀P tₛ C. C[P]⇓ₛ b(tₛ) =>
+  (b(tₛ)=db(t) => db(tₛ) ∈ π) /\
+  (b(tₛ)=ub(tₛ,C) => ∃db(tₛ') ∈ π /\ tₛ≤tₛ') /\
+  (b(tₛ)=ub(tₛ,P) => ∀tₛ'. tₛ≤tₛ' /\ db(tₛ') ∈ π)
+
+Assume h2
+  ∀P tᵢ c. c[P↓]⇓ᵢb(tᵢ)
+
+Goal
+  (b(tᵢ)=db(tᵢ) => db(tᵢ) ∈ π) /\
+  (b(tᵢ)=ub(tᵢ,c) => ∃db(tᵢ') ∈ π /\ tᵢ≤tᵢ') /\
+  (b(tᵢ)=ub(tᵢ,P) => ∀tᵢ'. tᵢ≤tᵢ' /\ db(tᵢ') ∈ π)
+
+
+i) c no ub, P↓ no ub, P ref/no ref
+h2: c[P↓]⇓ᵢdb(tᵢ) =>RC4
+∃C. C[P] ⇓ₛ b(tᵢ)
+1) C[P] ⇓ₛ db(tᵢ)
+by RS db(tᵢ) ∈ π
+2) C[P] ⇓ₛ ub(prefix(tᵢ), P)
+To show
+    (b(tᵢ)=ub(tᵢ,P↓) => ∀tᵢ'. tᵢ≤tᵢ' /\ db(tᵢ') ∈ π)
+by RS ∀tᵢ'. prefix(tᵢ)≤tᵢ' /\ db(tᵢ') ∈ π
+
+ii) c no ub, P↓ ub, P ref/no ref
+h2: c[P↓]⇓ᵢub(tᵢ,P) =>RC4
+∃C.
+1) C[P] ⇓ₛ ub(tᵢ,P)
+To show:
+  (b=ub(tᵢ,P) => ∀tᵢ'. tᵢ≤tᵢ' /\ db(tᵢ') ∈ π)
+by RS: ub(tᵢ,P) => ∀tᵢ'. tᵢ≤tᵢ' /\ db(tᵢ') ∈ π
+2) C[P] ⇓ₛ ub(prefix(tᵢ), P)
+To show:
+  (b=ub(tᵢ,P) => ∀tᵢ'. tᵢ≤tᵢ' /\ db(tᵢ') ∈ π)
+by RS ub(prefix(tᵢ),P) => ∀ tᵢ'. prefix(tᵢ)≤tᵢ' /\ db(tᵢ') ∈ π
+
+iii) c ub, P↓ no ub, P ref/no ref
+h2: c[P↓]⇓ᵢub(tᵢ,C) =>HR
+∃b' c' defined. c'[P↓]⇓ᵢb'(tᵢ) /\ b'≠ub(tᵢ,c') =>RC4
+by i) or ii)
+
+*** RC => PRS_IT
+    is a special case of the previous proof
+*** RC_SI + RC_IT => RC_ST
+    interesting?
+*** PSR_SI + PSR_IT => PSR_ST
+Assume PRS_SI
+  (∀P tₛ C. C[P]⇓ₛ b(tₛ) =>
+   (b(tₛ)=db(t) => db(tₛ) ∈ π) /\
+   (b(tₛ)=ub(tₛ,C) => ∃db(tₛ') ∈ π /\ tₛ≤tₛ') /\
+   (b(tₛ)=ub(tₛ,P) => ∀tₛ'. tₛ≤tₛ' /\ db(tₛ') ∈ π)) =>
+  (∀P tᵢ C. C[P↓]⇓ᵢ b(tᵢ) =>
+   (b(tᵢ)=db(t) => db(tᵢ) ∈ π) /\
+   (b(tᵢ)=ub(tᵢ,C) => ∃db(tᵢ') ∈ π /\ tᵢ≤tᵢ') /\
+   (b(tᵢ)=ub(tᵢ,P) => ∀tᵢ'. tᵢ≤tᵢ' /\ db(tᵢ') ∈ π))
+
+Assume PRS_IT
+  (∀P tᵢ C. C[P]⇓ᵢ b(tᵢ) =>
+   (b(tᵢ)=db(t) => db(tᵢ) ∈ π) /\
+   (b(tᵢ)=ub(tᵢ,C) => ∃db(tᵢ') ∈ π /\ tᵢ≤tᵢ') /\
+   (b(tᵢ)=ub(tᵢ,P) => ∀tᵢ'. tᵢ≤tᵢ' /\ db(tᵢ') ∈ π)) =>
+  (∀P tₜ C. C[P↓]⇓ₜ b(tₜ) =>
+   (b(tₜ)=db(t) => db(tₜ) ∈ π) /\
+   (b(tₜ)=ub(tₜ,C) => ∃db(tₜ') ∈ π /\ tₜ≤tₜ') /\
+   (b(tₜ)=ub(tₜ,P) => ∀tₜ'. tₜ≤tₜ' /\ db(tₜ') ∈ π))
+
+Assume
+  (∀P tₛ C. C[P]⇓ₛ b(tₛ) =>
+   (b(tₛ)=db(t) => db(tₛ) ∈ π) /\
+   (b(tₛ)=ub(tₛ,C) => ∃db(tₛ') ∈ π /\ tₛ≤tₛ') /\
+   (b(tₛ)=ub(tₛ,P) => ∀tₛ'. tₛ≤tₛ' /\ db(tₛ') ∈ π))
+
+To show
+  (∀P tₜ C. C[P↓↓]⇓ₜ b(tₜ) =>
+   (b(tₜ)=db(t) => db(tₜ) ∈ π) /\
+   (b(tₜ)=ub(tₜ,C) => ∃db(tₜ') ∈ π /\ tₜ≤tₜ') /\
+   (b(tₜ)=ub(tₜ,P) => ∀tₜ'. tₜ≤tₜ' /\ db(tₜ') ∈ π))
 
 * Robust Execution (variant of NEW_RC_DC)
 What we would like to have is something finer-grained that, ideally, replaces
@@ -532,6 +714,14 @@ by Composition
 we have that
   ∃ Pᵢ FD(Pᵢ) ∧ ⋈(p\pᵢ ∪ Pᵢ↓) ⇓ b
   which is what we wanted to show.
+** Robust Execution with Undefined Behavior at target
+RE (Robust Execution):
+  ∀ ρ={p₁,...,pₙ}.
+    (⋈(ρ) ⇓ b =>
+      ∀ pᵢ. ∃ Pᵢ. FD(Pᵢ) ∧ ⋈(ρ\pᵢ ∪ Pᵢ↓) ⇓ b) ∨
+    (⋈(ρ) ⇓ GoingWrong(t, pᵢ) =>
+      (∀ pⱼ s.t. j ≠ i. ∃ Pⱼ. FD(Pⱼ) ∧ ⋈(ρ\pⱼ ∪ Pⱼ↓) ⇓ GoingWrong(t, pᵢ)) ∧
+      (∃ Pᵢ b'. FD(Pᵢ) ∧ ⋈(ρ\pᵢ ∪ Pᵢ↓) ⇓ b' ∧ trace(b') = t)
 * Mutual Distrust for πᵢ (broken variant of RC_DC+MD?)
 An interesting case is the one with more than two mutually distrustful source
 level components. There are several characterization of it, the iterative one
@@ -554,17 +744,6 @@ P = {P₁, ..., Pₙ}   Ps ∈ subsets(P)
 ⋈(P)↓ ⇓ b => ∀ Ps. RC4(Ps, (P\Ps)↓, b)
   
 * Bits and pieces
-** Partial Definability
-PDEF: PP ⇓ₜ b  => ∃PP'. PP'⇓ₛ b
-PDEF on all components implies DEF on whole programs: WP ⇓ₜ b  =>? ∃WP'. WP'⇓ₛ b
-WP ⇓ₜ b => ⋈(p₁,...,pₙ) ⇓ₜ b 
-       =>DEC ∀pᵢ. pᵢ ⇓pt b 
-       =>PDef ∀pᵢ. ∃Pᵢ'. Pᵢ' ⇓ps b 
-       =>COMP ⋈(P₁',...,Pₙ') ⇓ₛ b 
-       => WP'⇓ₛ b
-TODO: If there is UB in b (e.g. if we are at intermediate instead of
-target) then we need to use DECR and recheck the proof
-
 ** De/composition with refinement
 If we want to have UB in a language then we need to add refinement to its decomposition.
 If the context does UB then the partial context refines it.
@@ -576,6 +755,16 @@ TODO CHECK ALL UB CASES
 
 Definability on the same level (the old definability):
 DEFS: P ⇓{C} b => ∃C. C[P] ⇓ b      (on the Same level. P can do UB and C cannot)
+** Partial Definability
+PDEF: PP ⇓ₜ b  => ∃PP'. PP'⇓ₛ b
+PDEF on all components implies DEF on whole programs: WP ⇓ₜ b  =>? ∃WP'. WP'⇓ₛ b
+WP ⇓ₜ b => ⋈(p₁,...,pₙ) ⇓ₜ b 
+       =>DEC ∀pᵢ. pᵢ ⇓pt b 
+       =>PDef ∀pᵢ. ∃Pᵢ'. Pᵢ' ⇓ps b 
+       =>COMP ⋈(P₁',...,Pₙ') ⇓ₛ b 
+       => WP'⇓ₛ b
+TODO: If there is UB in b (e.g. if we are at intermediate instead of
+target) then we need to use DECR and recheck the proof
 
 ** Preservation of Robust Satisfaction by means of CCR and RE
 Main Theorem:
@@ -752,111 +941,99 @@ Is this a contradiction? What is the connection between b_bad and b''?
 FD (Fully Definedness):
   ∀ C b. ¬ (⋈(C, P) ⇓ GoingWrong(b))
 TODO in many cases we might need only definedness for a specific behavior b
+** another variant
 
-* Robust Execution with Undefined Behavior at target
-RE (Robust Execution):
-  ∀ ρ={p₁,...,pₙ}.
-    (⋈(ρ) ⇓ b =>
-      ∀ pᵢ. ∃ Pᵢ. FD(Pᵢ) ∧ ⋈(ρ\pᵢ ∪ Pᵢ↓) ⇓ b) ∨
-    (⋈(ρ) ⇓ GoingWrong(t, pᵢ) =>
-      (∀ pⱼ s.t. j ≠ i. ∃ Pⱼ. FD(Pⱼ) ∧ ⋈(ρ\pⱼ ∪ Pⱼ↓) ⇓ GoingWrong(t, pᵢ)) ∧
-      (∃ Pᵢ b'. FD(Pᵢ) ∧ ⋈(ρ\pᵢ ∪ Pᵢ↓) ⇓ b' ∧ trace(b') = t)
-* again
-Proof and definition become more detailed, which means clearer but also harder to read.
-The π contains only DEF and it's much clearer.
+   Π ⊆ { db(t) | ∃ C. C[P] ⇓ db(t) } ∪ { db(t) | ∃ C. C[P] ⇓ ub(t,P) }
 
-** Robust Satisfaction:
-  P robustly satisfies π ⊆ DEF
-  ∀P b C. C[P]⇓b => ∃t.
-  (b=db(t) => db(t) ∈ π) /\
-  (b=ub(t,C) => ∃db(t') ∈ π /\ t≤t') /\
-  (b=ub(t,P) => ∀t'. t≤t' /\ db(t') ∈ π)
+   πₚ = Π ∪ { db(t) | ∃C t'. C[P] ⇓ ub(t',P) /\ t'≤t /\ ∃P'. C[P'] ⇓ db(t) /\ ∃ db(t') ∈ Π) }
+// (∃ t'. C[P] ⇓ ub(t',C) /\ t'≤t /\ ∃ db(t) ∈ Π) \/
 
-  Note that satisfaction for whole programs is an instance with an
-  empty C and the second match doesn't occur.
+   P is FD => πₚ = Π
 
-** Preservation of RS:
-  RS_L1(P) => RS_L2(P↓)
-** RC+HR => PRS_SI
 
-Assume
-  HR: ∀C. C[P]⇓b(t) => ∃C' defined. C'[P]⇓b'(t) /\ b'≠ub(t,C')
+   Π ⊆ { db(t)   | ∃ C. C[P] ⇓ db(t) } ∪
+       { ub(t,P) | ∃ C. C[P] ⇓ ub(t,P) }
 
-Assume h1 
-  ∀P tₛ C. C[P]⇓ₛ b(tₛ) =>
-  (b(tₛ)=db(t) => db(tₛ) ∈ π) /\
-  (b(tₛ)=ub(tₛ,C) => ∃db(tₛ') ∈ π /\ tₛ≤tₛ') /\
-  (b(tₛ)=ub(tₛ,P) => ∀tₛ'. tₛ≤tₛ' /\ db(tₛ') ∈ π)
+   πₚ = Π
+      ∪ { ub(t',C) | ∃ t t'. t >= t' /\ db(t) ∈ Π }
+      ∪ { db(t)    | ∃ t t'. t >= t' ‌/\ ub(t',P) ∈ Π }.
 
-Assume h2
-  ∀P tᵢ c. c[P↓]⇓ᵢb(tᵢ)
+   P has UB with ε => { ε } ∈ Π /\ πₚ = { db(t) | ∃ C. ∃ P'. P' ⇓ db(t) }
 
-Goal
+   Robust Satisfaction:
+     ∀P t C. C[P]⇓b(t) =>
+       (b=db(t) => db(t) ∈ πₚ) /\
+       (b=ub(t,_) => ∃ db(t) ∈ πₚ)
+* complete proof for our instance and our targets
+  we can use RC from c[P↓] to C[P] to obtain PRS_SI.
+  if we use CC from (c[P↓])↓ to c[P↓] we get only PS_IT which in
+  principle is not enough to preserve our properties.
+  however below there is a proof that CC provides PRS_IT.
+  maybe it works because we start from the target, we should try to
+  prove PRS_SI from CC_SI, if it works then there is something very
+  broken.
+  TODO check where the proof should break
+
+
+  To Show:
+  PRS_IT:
+  (∀P tᵢ c. c[P↓]⇓ᵢ b(tᵢ) =>
   (b(tᵢ)=db(tᵢ) => db(tᵢ) ∈ π) /\
-  (b(tᵢ)=ub(tᵢ,c) => ∃db(tᵢ') ∈ π /\ tᵢ≤tᵢ') /\
-  (b(tᵢ)=ub(tᵢ,P) => ∀tᵢ'. tᵢ≤tᵢ' /\ db(tᵢ') ∈ π)
+  (b(tᵢ)=ub(tᵢ,C) => ∃db(t,t') ∈ π) /\           TODO I CHANGED THIS CASE!
+  (b(tᵢ)=ub(tᵢ,P) => ∀tᵢ'. tᵢ≤tᵢ' /\ db(tᵢ') ∈ π))
+  =>
+  (∀P tₜ c. (c[P↓])↓ ⇓ₜ db(tₜ) => db(tₜ) ∈ π)
+
+  Assume CC (WP=c[P↓]):
+  ∀ b. (c[P↓])↓ ⇓ₜ db(tₜ) => c[P↓] ⇓ᵢ db(tₜ) ∨ c[P↓] ⇓ᵢ ub(prefix(tₜ))
+
+  Assume h1:
+  (∀P tᵢ c. c[P↓]⇓ᵢ b(tᵢ) =>
+  (b(tᵢ)=db(tᵢ) => db(tᵢ) ∈ π) /\
+  (b(tᵢ)=ub(tᵢ,C) => ∃db(tᵢ) ∈ π) /\
+  (b(tᵢ)=ub(tᵢ,P) => ∀tᵢ'. tᵢ≤tᵢ' /\ db(tᵢ') ∈ π))
+
+  Assume h2:
+  ∀P tₜ c. (c[P↓])↓ ⇓ₜ db(tₜ)
+
+  Proof:
+  h2 =>CC
+  i) c[P↓] ⇓ᵢ db(tₜ) ∨
+  ii) c[P↓] ⇓ᵢ ub(prefix(tₜ))
+
+  i) => h1
+     db(tₜ) ∈ π OK
+
+  ii.a) c[P↓] ⇓ᵢ ub(prefix(tₜ),P) =>h1
+         ∀tᵢ'. prefix(tₜ)≤tᵢ' /\ db(tᵢ') ∈ π => specialize tᵢ'=tₜ
+         db(tₜ) ∈ π OK
+
+  ii.b) c[P↓] ⇓ᵢ ub(prefix(tₜ),C) =>h1
+        ∃db(prefix(tₜ),t') ∈ π =>
+        ∃c'. c'[P↓] ⇓ᵢ db(prefix(tₜ),t')
+        db(tₜ)
+        TODO how do we know that is the correct db? we could stenghten PRS with ∀db(t). db(t)∈π.
 
 
-i) c no ub, P↓ no ub, P ref/no ref
-h2: c[P↓]⇓ᵢdb(tᵢ) =>RC4
-∃C. C[P] ⇓ₛ b(tᵢ)
-1) C[P] ⇓ₛ db(tᵢ)
-by RS db(tᵢ) ∈ π
-2) C[P] ⇓ₛ ub(prefix(tᵢ), P)
-To show
-    (b(tᵢ)=ub(tᵢ,P↓) => ∀tᵢ'. tᵢ≤tᵢ' /\ db(tᵢ') ∈ π)
-by RS ∀tᵢ'. prefix(tᵢ)≤tᵢ' /\ db(tᵢ') ∈ π
+        Imagine a bad trace at the target db(t₁t₂) where t₁ respects
+        πₚ and t₂ breaks it, we know that db(t₁t₂) ∉π. It is mapped by
+        CC to a trace ub(t₁,C) which corresponds to a db(t₁) in πₚ.
+        This doesn't seem to help, the only way to have t₁t₂ in π is
+        to have them in a defined behavior db(t₁t₂), the only way to
+        backmap a defined behavior is to do it precisely.
 
-ii) c no ub, P↓ ub, P ref/no ref
-h2: c[P↓]⇓ᵢub(tᵢ,P) =>RC4
-∃C.
-1) C[P] ⇓ₛ ub(tᵢ,P)
-To show:
-  (b=ub(tᵢ,P) => ∀tᵢ'. tᵢ≤tᵢ' /\ db(tᵢ') ∈ π)
-by RS: ub(tᵢ,P) => ∀tᵢ'. tᵢ≤tᵢ' /\ db(tᵢ') ∈ π
-2) C[P] ⇓ₛ ub(prefix(tᵢ), P)
-To show:
-  (b=ub(tᵢ,P) => ∀tᵢ'. tᵢ≤tᵢ' /\ db(tᵢ') ∈ π)
-by RS ub(prefix(tᵢ),P) => ∀ tᵢ'. prefix(tᵢ)≤tᵢ' /\ db(tᵢ') ∈ π
+        TODO is CC with components a special case of RC?
+* catalin's example to separate RC_DC with RC_SC
+  Cₜ is a component that never 'blows_up' unless it has 'ask'ed the user and got back 'yes'. 
+     it is semi-trusted, it has undefined behavior only if returned a 'bad' input after calling Cᵤ.P
+  Cᵤ is untrusted and can return a bad input to Cₜ
 
-iii) c ub, P↓ no ub, P ref/no ref
-h2: c[P↓]⇓ᵢub(tᵢ,C) =>HR
-∃b' c' defined. c'[P↓]⇓ᵢb'(tᵢ) /\ b'≠ub(tᵢ,c') =>RC4
-by i) or ii)
+  the property that we want to preserve is that an event blow_up can
+  only happen if it follows a yes or an bad input.
 
-** RC => PRS_IT
-   is a special case of the previous proof
-** RC_SI + RC_IT => RC_ST
-   interesting?
-** PSR_SI + PSR_IT => PSR_ST
-Assume PRS_SI
-  (∀P tₛ C. C[P]⇓ₛ b(tₛ) =>
-   (b(tₛ)=db(t) => db(tₛ) ∈ π) /\
-   (b(tₛ)=ub(tₛ,C) => ∃db(tₛ') ∈ π /\ tₛ≤tₛ') /\
-   (b(tₛ)=ub(tₛ,P) => ∀tₛ'. tₛ≤tₛ' /\ db(tₛ') ∈ π)) =>
-  (∀P tᵢ C. C[P↓]⇓ᵢ b(tᵢ) =>
-   (b(tᵢ)=db(t) => db(tᵢ) ∈ π) /\
-   (b(tᵢ)=ub(tᵢ,C) => ∃db(tᵢ') ∈ π /\ tᵢ≤tᵢ') /\
-   (b(tᵢ)=ub(tᵢ,P) => ∀tᵢ'. tᵢ≤tᵢ' /\ db(tᵢ') ∈ π))
+  π = { b(t) | t=t₁:blow_up:t₂ => [Cₜ Call ask :: Ret yes] ∈ t₁ ‌\/
+                                  [Cₜ Call Cᵤ.P :: Ret bad] ∈ t₁ }
 
-Assume PRS_IT
-  (∀P tᵢ C. C[P]⇓ᵢ b(tᵢ) =>
-   (b(tᵢ)=db(t) => db(tᵢ) ∈ π) /\
-   (b(tᵢ)=ub(tᵢ,C) => ∃db(tᵢ') ∈ π /\ tᵢ≤tᵢ') /\
-   (b(tᵢ)=ub(tᵢ,P) => ∀tᵢ'. tᵢ≤tᵢ' /\ db(tᵢ') ∈ π)) =>
-  (∀P tₜ C. C[P↓]⇓ₜ b(tₜ) =>
-   (b(tₜ)=db(t) => db(tₜ) ∈ π) /\
-   (b(tₜ)=ub(tₜ,C) => ∃db(tₜ') ∈ π /\ tₜ≤tₜ') /\
-   (b(tₜ)=ub(tₜ,P) => ∀tₜ'. tₜ≤tₜ' /\ db(tₜ') ∈ π))
+  old_rc_dc seems to save this example
 
-Assume
-  (∀P tₛ C. C[P]⇓ₛ b(tₛ) =>
-   (b(tₛ)=db(t) => db(tₛ) ∈ π) /\
-   (b(tₛ)=ub(tₛ,C) => ∃db(tₛ') ∈ π /\ tₛ≤tₛ') /\
-   (b(tₛ)=ub(tₛ,P) => ∀tₛ'. tₛ≤tₛ' /\ db(tₛ') ∈ π))
-
-To show
-  (∀P tₜ C. C[P↓↓]⇓ₜ b(tₜ) =>
-   (b(tₜ)=db(t) => db(tₜ) ∈ π) /\
-   (b(tₜ)=ub(tₜ,C) => ∃db(tₜ') ∈ π /\ tₜ≤tₜ') /\
-   (b(tₜ)=ub(tₜ,P) => ∀tₜ'. tₜ≤tₜ' /\ db(tₜ') ∈ π))
+  TODO finish writing
